# cms

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs  migrations.rs  models.rs
backend/src/handlers/: analytics.rs  auth.rs  media.rs  menus.rs  mod.rs  pages.rs  redirects.rs  settings.rs  sliders.rs
backend/src/middleware/: auth.rs  csrf.rs
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/components/: Footer.svelte  Header.svelte  Pagination.svelte  Slider.svelte  Toast.svelte
frontend/src/lib/stores/: auth.js  auth.svelte.js  theme.js  theme.svelte.js
frontend/src/lib/utils/: api.js  sanitize.js
frontend/src/routes/: +error.svelte  +layout.svelte
frontend/src/routes/(site)/: +layout.svelte  +page.svelte
frontend/src/routes/(site)/page/[slug]/: +page.svelte
frontend/src/routes/(site)/search/: +page.svelte
frontend/src/routes/(site)/tag/[tag]/: +page.svelte
frontend/src/routes/admin/: +layout.svelte
frontend/src/routes/admin/analytics/: +page.svelte
frontend/src/routes/admin/dashboard/: +page.svelte
frontend/src/routes/admin/login/: +page.svelte
frontend/src/routes/admin/media/: +page.svelte
frontend/src/routes/admin/menus/: +page.svelte
frontend/src/routes/admin/pages/: +page.svelte
frontend/src/routes/admin/redirects/: +page.svelte
frontend/src/routes/admin/settings/: +page.svelte
frontend/src/routes/admin/sliders/: +page.svelte
frontend/src/routes/error/: +page.svelte
(+2 files in other folders)
