[package]
name = "cms-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive"] }
tokio-postgres-rustls = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
jsonwebtoken = "9"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
image = "0.25"
slug = "0.1"
html-escape = "0.2"
ammonia = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
